@@ -2,40 +2,67 @@ package community.ddv.dto;
 
 import community.ddv.entity.Movie;
 import community.ddv.entity.Vote;
+import community.ddv.entity.VoteMovie;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.AllArgsConstructor;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
 
-
+// 투표 생성 & 결과 관련 DTO
 @Getter
 public class VoteDTO {
 
   @Getter
-  @NoArgsConstructor
-  public static class VoteRequestDto {
-    private String title; // 투표 제목
+  public static class VoteCreatedDTO {
 
-  }
-
-  @Getter
-  public static class VoteResponseDTO {
     private Long voteId;
     private String title; // 투표 제목
-    private List<Long> movieTmdbIds; // 투표에 포함된 영화 리스트
     private LocalDateTime startDate;
     private LocalDateTime endDate;
+    //private List<Long> movieTmdbIds; // 투표에 포함된 영화 리스트
+    private List<VoteMovieResultDTO> movieDetails = new ArrayList<>();  // tmdbIds, 등수, 투표수
 
-    public VoteResponseDTO(Vote vote) {
+    public VoteCreatedDTO(Vote vote) {
       voteId = vote.getId();
       title = vote.getTitle();
       startDate = vote.getStartDate();
       endDate = vote.getEndDate();
-      movieTmdbIds = vote.getMovies().stream()
-          .map(Movie::getTmdbId)
-          .collect(Collectors.toList());
+
+      int rank = 1;
+//      for (Movie movie : vote.getVoteMovies().stream().map(VoteMovie::getMovie).toList()) {
+//        VoteMovieResultDTO movieVoteDto = new VoteMovieResultDTO(
+//            movie.getTmdbId(),
+//            0,
+//            rank
+//        );
+      for (VoteMovie voteMovie : vote.getVoteMovies()) {
+        Movie movie = voteMovie.getMovie();
+        VoteMovieResultDTO voteMovieResultDTO = new VoteMovieResultDTO(
+            movie.getTmdbId(),
+            voteMovie.getVoteCount(),
+            0,
+            voteMovie.getLastVotedAt()
+        );
+        movieDetails.add(voteMovieResultDTO);
+        rank++;
+
+      }
     }
+//      movieTmdbIds = vote.getMovies().stream()
+//          .map(Movie::getTmdbId)
+//          .collect(Collectors.toList());
   }
 
+  @Getter
+  @AllArgsConstructor
+  public static class VoteResultDTO {
+
+    private Long voteId;
+    private LocalDateTime startDate;
+    private LocalDateTime endDate;
+    private boolean isActivating; // 진행중 여부
+    private List<VoteMovieResultDTO> results; // 영화별 투표 결과 리스트
+
+  }
 }
